updated property names to be (mostly) correct for mozilla. still doesn't seem to affect image border radius on firefox 3

--- a/static/style.css
+++ b/static/style.css
@@ -58,6 +58,7 @@ div#banner-container {
 div#contact-info {
   background-color: black;
   border-radius: 4px;
+  -moz-border-radius: 4px;
   box-shadow: 5px 5px 5px #000030;
   -moz-box-shadow: 5px 5px 5px #000030;
   -webkit-box-shadow: 5px 5px 5px #000030;
@@ -79,8 +80,10 @@ div#container {
 
 div#photos-container {
   background-color: black;
-  border-top-left-radius: 20px;
-  border-bottom-left-radius: 20px;
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
+  -moz-border-radius-topleft: 10px;
+  -moz-border-radius-bottomleft: 10px;
   box-shadow: 0px 0px 5px #000000;
   -moz-box-shadow: 0px 0px 5px #000000;
   -webkit-box-shadow: 0px 0px 5px #000000;
@@ -101,6 +104,8 @@ div.small-banner {
   background-color: black;
   border-bottom-left-radius: 4px;
   border-top-left-radius: 4px;
+  -moz-border-radius-topleft: 4px;
+  -moz-border-radius-bottomleft: 4px;
   border-top: thin solid #444444;
   box-shadow: 0px 3px 5px #000030;
   -moz-box-shadow: 0px 3px 5px #000030;
@@ -116,12 +121,14 @@ div#splash {
   background-repeat: no-repeat;
   height: 535px;
   border-radius: 10px;
+  -moz-border-radius: 10px;
   position: relative;
 }
 
 div#splash-shadow {
   background-color: white;
   border-radius: 10px;
+  -moz-border-radius: 10px;
   position: absolute;
   width: 100%;
   height: 100%;
@@ -156,6 +163,7 @@ h1 a:hover {
 input.credentials {
   border: none;
   border-radius: 3px;
+  -moz-border-radius: 3px;
   font-size: 14pt;
   padding-left: 3px;
   padding-right: 3px;
@@ -178,6 +186,8 @@ table#login-form td {
 tr#the-row td:first-child img {
   border-top-left-radius: 4px;
   border-bottom-left-radius: 4px;
+  -moz-border-radius-topleft: 4px;
+  -moz-border-radius-bottomleft: 4px;
 }
 
 tr#the-row td img {
@@ -228,6 +238,8 @@ ul.submenu li {
   border: thin solid gray;
   border-bottom-left-radius: 4px;
   border-bottom-right-radius: 4px;
+  -moz-border-radius-bottomleft: 4px;
+  -moz-border-radius-bottomright: 4px;
   color: white;
   left: 50%;
   margin-left: -200px;
@@ -243,6 +255,8 @@ ul.submenu li {
   border: thin solid gray;
   border-bottom-left-radius: 4px;
   border-bottom-right-radius: 4px;
+  -moz-border-radius-bottomleft: 4px;
+  -moz-border-radius-bottomright: 4px;
   color: white;
   left: 50%;
   margin-left: -200px;
